Fixed IE9 mobile icon position. It appears the visibility classes supplied with foundation have unintended issues with alignment. May have to look at just doing my own since I don't use the foundation ones very much to start.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -272,6 +272,11 @@ section {
 // must be font height issue. Honestly probably better off
 // using sprites for these icons!!
 .win {
+  &.ie9 #mobile-menu .show-for-small {
+    display: block !important;
+    @include respond(small) { display: none !important; }
+  }
+
   #mobile-menu i {
     margin-top: remCalc(-39px);
   }
